Configurando as rotas, views e controllerda aplicacao

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,4 +1,35 @@
 {% extends "modelo.html" %}
 {% block conteudo %}
-    <p>Teste</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <title>Sobre</title>
+    <meta charset="utf-8">
+  </head>
+  <style>
+      .nome {list-style-type:square; font-size: 24px; color: aqua;}
+
+      li {list-style-type:none}
+  </style>
+  <body>
+    <h1>Equipe</h1>
+    <ul>
+      <li class="nome">Lanusse Helena de Almeida Silveira:</li>
+        <li>Formada em Design de interiores</li>
+        <li>Pós graduada em Backend Jr</li>
+        <li>Cursando Sistemas para internet</li>
+        <li>Uniesp, P1</li>
+        <li>Em busca da transição de carreira para trabalhar na área de tecnologia.</li>
+        <li class="nome">Leonardo Paiva Leite de Andrade:</li>
+        <li>Cursando Sistemas para internet</li>
+        <li>Uniesp, P1</li>
+        <li class="nome">Monique Araújo Morais:</li>
+        <li>Natural de João Pessoa, Paraíba</li>
+        <li>24 anos</li>
+        <li>Cursando Sistemas para internet</li>
+        <li>Uniesp, P1</li>
+    </ul>
+  </body>
+</html>
+
 {% endblock %}
