--- a/templates/modelo.html
+++ b/templates/modelo.html
@@ -22,16 +22,16 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sobre">Sobre</a>
+                    <a class="nav-link" href="sobre">Sobre</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Glossário
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/glossario">Listar Termos</a></li>
+                        <li><a class="dropdown-item" href="glossario">Listar Termos</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/novo_termo">Novo Termo</a></li>
+                        <li><a class="dropdown-item" href="novo_termo">Novo Termo</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -39,9 +39,9 @@
                         Lista de Tarefas
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/glossario">Listar arefas</a></li>
+                        <li><a class="dropdown-item" href="tarefas">Listar tarefas</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/novo_termo">Nova tarefa</a></li>
+                        <li><a class="dropdown-item" href="nova_tarefa">Nova tarefa</a></li>
                     </ul>
                 </li>
             </ul>
